--- a/defense.htm
+++ b/defense.htm
@@ -1964,23 +1964,13 @@ arguably the only sane usage of coming out after a pass.
    Over strong notrump
   </h1>
   <p>
-   Recommended by
    <em>
-    Good, Better, Best,
+    Good, Better, Best
    </em>
-   we play (Meckwell) DONT against a strong
-notrump.  We consider a natural notrump opening strong if at least half of the
-hands contain 15+ HCP.  For instance, 14&ndash;16 is considered strong but 13&ndash;15 is
-not.
-  </p>
-  <p>
-   Over the first seat (1NT), we use the original DONT except that the other suit
-in 2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   is always a major.  Responses are natural P/C.  Responder can also
-convert the constructive double to penalty with INV+ hands.
+   recommends using conventional double over a strong
+notrump.  We play Woolsey in all seats.  We consider a natural notrump opening
+strong if at least half of the hands contain 15+ HCP. For instance, 14&ndash;16 is
+considered strong but 13&ndash;15 is not.
   </p>
   <div class="tree">
    <ul>
@@ -1994,7 +1984,7 @@ convert the constructive double to penalty with INV+ hands.
           Dbl
          </td>
          <td>
-          6+X, 10&ndash;15 HCP
+          !CONST, 4+M, 5+m
          </td>
         </tr>
        </table>
@@ -2003,10 +1993,13 @@ convert the constructive double to penalty with INV+ hands.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            2X
+            2
+            <span class="ccolor">
+             &clubs;
+            </span>
            </td>
            <td>
-            P/C
+            !P/C
            </td>
           </tr>
          </table>
@@ -2015,10 +2008,13 @@ convert the constructive double to penalty with INV+ hands.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            2NT
+            2
+            <span class="dcolor">
+             &diams;
+            </span>
            </td>
            <td>
-            FG, so unbalanced that defending 1NTx can be dangerous
+            !Ask for the major suit
            </td>
           </tr>
          </table>
@@ -2035,53 +2031,95 @@ convert the constructive double to penalty with INV+ hands.
           </span>
          </td>
          <td>
-          4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 4+M, 5&ndash;11 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          4+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 4+M, 5&ndash;11 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          4+
-          <span class="hcolor">
-           &hearts;
+          !UNBAL PRE, 4+
+          <span class="scolor">
+           &spades;
           </span>
           , 4+
-          <span class="scolor">
-           &spades;
+          <span class="hcolor">
+           &hearts;
           </span>
-          , 5&ndash;11 HCP
+          , usually (54)(xx)
+         </td>
+        </tr>
+       </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !Equal preference
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2NT
+           </td>
+           <td>
+            !INV+
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !INV+, 3+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !INV+, 3+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !PRE, 6+M
          </td>
         </tr>
        </table>
@@ -2090,17 +2128,10 @@ convert the constructive double to penalty with INV+ hands.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
+          2M
          </td>
          <td>
-          6+
-          <span class="scolor">
-           &spades;
-          </span>
-          , 5&ndash;11 HCP
+          !PRE, 5+#, 4+m
          </td>
         </tr>
        </table>
@@ -2112,133 +2143,7 @@ convert the constructive double to penalty with INV+ hands.
           2NT
          </td>
          <td>
-          5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 5&ndash;11 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <p>
-   We use Meckwell DONT in the other seats.  Potential penalty is not that useful
-since at least one of us has a passed hand.
-  </p>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     (1NT)
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          Dbl
-         </td>
-         <td>
-          6+m or 4+
-          <span class="scolor">
-           &spades;
-          </span>
-          4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 4+M
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          4+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 4+M
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          5+
+          !UNT, 5+
           <span class="dcolor">
            &diams;
           </span>
