deploy: 40c0de8d60d153fb42e4f58bbdc262345c9808b8

--- a/wj.htm
+++ b/wj.htm
@@ -10936,10 +10936,7 @@ spade fit, i.e. 2533.
           2NT
          </td>
          <td>
-          MAX, 1&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
+          MAX, 53(32)
          </td>
         </tr>
        </table>
@@ -11023,10 +11020,7 @@ spade fit, i.e. 2533.
           3NT
          </td>
          <td>
-          BAL MAX, 3=
-          <span class="hcolor">
-           &hearts;
-          </span>
+          MAX, 5233
          </td>
         </tr>
        </table>
