deploy: b188baa21d703b7e6312a7d596df4ecef975f946

--- a/blue.htm
+++ b/blue.htm
@@ -5812,10 +5812,11 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          MIN, 3+
+          F, 3+
           <span class="hcolor">
            &hearts;
           </span>
+          , MIN or BAL MAX
          </td>
         </tr>
        </table>
@@ -5849,7 +5850,7 @@ spade fit, i.e. 2533.
           2NT
          </td>
          <td>
-          !F, 5+
+          !MAX, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -5921,7 +5922,7 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          MAX, 6+
+          MIN, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -5936,10 +5937,7 @@ spade fit, i.e. 2533.
           3NT
          </td>
          <td>
-          BAL MAX, 3=
-          <span class="hcolor">
-           &hearts;
-          </span>
+          MAX, 5233
          </td>
         </tr>
        </table>
