--- a/blue.htm
+++ b/blue.htm
@@ -5644,6 +5644,10 @@ spade fit, i.e. 2533.
           <span class="hcolor">
            &hearts;
           </span>
+          or 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -5691,7 +5695,7 @@ spade fit, i.e. 2533.
           2NT
          </td>
          <td>
-          MAX, 1&ndash;2
+          BAL MAX, 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -5713,6 +5717,10 @@ spade fit, i.e. 2533.
           <span class="ccolor">
            &clubs;
           </span>
+          , 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -5730,6 +5738,10 @@ spade fit, i.e. 2533.
           MAX canap&eacute;, 5+
           <span class="dcolor">
            &diams;
+          </span>
+          , 3=
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -5745,7 +5757,7 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          MAX canap&eacute;, 5+
+          MIN, 4=
           <span class="hcolor">
            &hearts;
           </span>
@@ -5767,6 +5779,10 @@ spade fit, i.e. 2533.
           <span class="scolor">
            &spades;
           </span>
+          , 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -5778,7 +5794,7 @@ spade fit, i.e. 2533.
           3NT
          </td>
          <td>
-          BAL MAX, 3=
+          MAX canap&eacute;, 5+
           <span class="hcolor">
            &hearts;
           </span>
