--- a/wj.htm
+++ b/wj.htm
@@ -10723,6 +10723,10 @@ spade fit, i.e. 2533.
           <span class="hcolor">
            &hearts;
           </span>
+          or 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -10770,7 +10774,7 @@ spade fit, i.e. 2533.
           2NT
          </td>
          <td>
-          MAX, 3&ndash;4
+          BAL MAX, 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -10792,7 +10796,7 @@ spade fit, i.e. 2533.
           <span class="ccolor">
            &clubs;
           </span>
-          , 3&ndash;4
+          , 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -10814,7 +10818,7 @@ spade fit, i.e. 2533.
           <span class="dcolor">
            &diams;
           </span>
-          , 3&ndash;4
+          , 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -10832,7 +10836,7 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          MIN, 4+
+          MIN, 4=
           <span class="hcolor">
            &hearts;
           </span>
@@ -10854,7 +10858,7 @@ spade fit, i.e. 2533.
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;2
+          , 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -10869,7 +10873,7 @@ spade fit, i.e. 2533.
           3NT
          </td>
          <td>
-          MAX, 5=
+          MAX, 4=
           <span class="hcolor">
            &hearts;
           </span>
