deploy: 0b778059ee8bcd14992cad2a4e4812d6e976aaba

--- a/wj.htm
+++ b/wj.htm
@@ -10907,7 +10907,7 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          MIN, 3+
+          MIN, 4+
           <span class="hcolor">
            &hearts;
           </span>
@@ -10925,7 +10925,7 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          MIN, 0&ndash;2
+          MIN, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -10940,7 +10940,10 @@ spade fit, i.e. 2533.
           2NT
          </td>
          <td>
-          MAX, 53(32)
+          !MAX, 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -10959,6 +10962,10 @@ spade fit, i.e. 2533.
           <span class="ccolor">
            &clubs;
           </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -10976,6 +10983,10 @@ spade fit, i.e. 2533.
           MAX, 4+
           <span class="dcolor">
            &diams;
+          </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -11012,6 +11023,10 @@ spade fit, i.e. 2533.
           MAX, 6+
           <span class="scolor">
            &spades;
+          </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
