deploy: 48423c09dfd0eaa0a4bd2c4b9f8e2461d36f17c4

--- a/blue.htm
+++ b/blue.htm
@@ -5122,11 +5122,11 @@ compete.
           </span>
          </td>
          <td>
-          PRE, 7&ndash;9 HCP 3=
+          PRE 4+
           <span class="hcolor">
            &hearts;
           </span>
-          or 0&ndash;7 HCP 4+
+          or CONST 3=
           <span class="hcolor">
            &hearts;
           </span>
@@ -5144,7 +5144,7 @@ compete.
           </span>
          </td>
          <td>
-          PRE, 0&ndash;7 HCP, 6+
+          PRE, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -5177,7 +5177,7 @@ compete.
           </span>
          </td>
          <td>
-          INV, 9&ndash;11 HCP, 6+
+          INV, 6+
           <span class="ccolor">
            &clubs;
           </span>
@@ -5199,7 +5199,7 @@ compete.
           </span>
          </td>
          <td>
-          INV, 9&ndash;11 HCP, 6+
+          INV, 6+
           <span class="dcolor">
            &diams;
           </span>
@@ -5221,11 +5221,11 @@ compete.
           </span>
          </td>
          <td>
-          INV, 10&ndash;11 HCP 4=
+          INV 4+
           <span class="hcolor">
            &hearts;
           </span>
-          or 7&ndash;9 HCP 5+
+          or CONST 5+
           <span class="hcolor">
            &hearts;
           </span>
@@ -5393,11 +5393,7 @@ compete.
           <span class="scolor">
            &spades;
           </span>
-          or FG (NAT or 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          )
+          or NAT FG
          </td>
         </tr>
        </table>
@@ -5412,7 +5408,7 @@ compete.
           </span>
          </td>
          <td>
-          !NF INV, 9&ndash;11 HCP, 5+
+          !NF INV, 5+
           <span class="hcolor">
            &hearts;
           </span>
@@ -5430,11 +5426,11 @@ compete.
           </span>
          </td>
          <td>
-          PRE, 7&ndash;9 HCP 3=
+          PRE 4+
           <span class="scolor">
            &spades;
           </span>
-          or 0&ndash;7 HCP 4+
+          or CONST 3=
           <span class="scolor">
            &spades;
           </span>
@@ -5467,7 +5463,7 @@ compete.
           </span>
          </td>
          <td>
-          INV, 9&ndash;11 HCP, 6+
+          INV, 6+
           <span class="ccolor">
            &clubs;
           </span>
@@ -5489,7 +5485,7 @@ compete.
           </span>
          </td>
          <td>
-          INV, 9&ndash;11 HCP, 6+
+          INV, 6+
           <span class="dcolor">
            &diams;
           </span>
@@ -5511,7 +5507,7 @@ compete.
           </span>
          </td>
          <td>
-          INV, 9&ndash;11 HCP, 6+
+          INV, 6+
           <span class="hcolor">
            &hearts;
           </span>
@@ -5533,11 +5529,11 @@ compete.
           </span>
          </td>
          <td>
-          INV, 10&ndash;11 HCP 4=
+          INV 4+
           <span class="scolor">
            &spades;
           </span>
-          or 7&ndash;9 HCP 5+
+          or CONST 5+
           <span class="scolor">
            &spades;
           </span>
@@ -5761,6 +5757,10 @@ spade fit, i.e. 2533.
           <span class="hcolor">
            &hearts;
           </span>
+          , 5+
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
         </tr>
        </table>
@@ -5828,11 +5828,10 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          F, 3+
-          <span class="hcolor">
-           &hearts;
+          !MIN, 4=
+          <span class="scolor">
+           &spades;
           </span>
-          , MIN or BAL MAX
          </td>
         </tr>
        </table>
@@ -5847,13 +5846,9 @@ spade fit, i.e. 2533.
           </span>
          </td>
          <td>
-          !MIN, 4=
+          MIN, 5=
           <span class="scolor">
            &spades;
-          </span>
-          , 0&ndash;2
-          <span class="hcolor">
-           &hearts;
           </span>
          </td>
         </tr>
@@ -5866,7 +5861,7 @@ spade fit, i.e. 2533.
           2NT
          </td>
          <td>
-          !MAX, 6+
+          BAL MAX, 5=
           <span class="scolor">
            &spades;
           </span>
@@ -5953,7 +5948,10 @@ spade fit, i.e. 2533.
           3NT
          </td>
          <td>
-          MAX, 5233
+          !MAX, 6+
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
         </tr>
        </table>
