deploy: bd0131d4289de3dbd3bc3b2186ac8a7b2e286724

--- a/wj.htm
+++ b/wj.htm
@@ -10168,7 +10168,6 @@ this fact to park minimum opening hands with 4+
           <span class="scolor">
            &spades;
           </span>
-          , 5+ HCP
          </td>
         </tr>
        </table>
@@ -10180,11 +10179,11 @@ this fact to park minimum opening hands with 4+
           1NT
          </td>
          <td>
-          NF, 0&ndash;3
+          NF, usually 7&ndash;11 HCP, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
-          , 7&ndash;11 HCP
+          ,
          </td>
         </tr>
        </table>
@@ -10229,11 +10228,10 @@ this fact to park minimum opening hands with 4+
           </span>
          </td>
          <td>
-          3+
+          CONST, 3+
           <span class="hcolor">
            &hearts;
           </span>
-          , 8.5&ndash;9.5 NLTC
          </td>
         </tr>
        </table>
@@ -10248,7 +10246,7 @@ this fact to park minimum opening hands with 4+
           </span>
          </td>
          <td>
-          !INV, (54)+ in minors, 9&ndash;11 HCP
+          !INV, 9&ndash;11 HCP, (54)+ in minors
          </td>
         </tr>
        </table>
@@ -10351,7 +10349,7 @@ this fact to park minimum opening hands with 4+
           3NT
          </td>
          <td>
-          !Choice of games, 33(43), 12&ndash;15 HCP
+          !Choice of games, 12&ndash;15 HCP, 33(43)
          </td>
         </tr>
        </table>
@@ -10437,15 +10435,14 @@ this fact to park minimum opening hands with 4+
           1NT
          </td>
          <td>
-          NF, 0&ndash;3
+          NF, usually 7&ndash;11 HCP, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;5
+          , 0&ndash;4
           <span class="hcolor">
            &hearts;
           </span>
-          , 7&ndash;11 HCP
          </td>
         </tr>
        </table>
@@ -10460,11 +10457,10 @@ this fact to park minimum opening hands with 4+
           </span>
          </td>
          <td>
-          !F, 5+
+          !NAT FG or NF 5+
           <span class="hcolor">
            &hearts;
           </span>
-          or NAT FG
          </td>
         </tr>
        </table>
@@ -10479,11 +10475,10 @@ this fact to park minimum opening hands with 4+
           </span>
          </td>
          <td>
-          !FG, 5+
+          !FG, NAT or 5+
           <span class="hcolor">
            &hearts;
           </span>
-          or NAT
          </td>
         </tr>
        </table>
@@ -10516,11 +10511,10 @@ this fact to park minimum opening hands with 4+
           </span>
          </td>
          <td>
-          3+
+          CONST, 3+
           <span class="scolor">
            &spades;
           </span>
-          , 8.5&ndash;9.5 NLTC
          </td>
         </tr>
        </table>
@@ -10631,7 +10625,7 @@ this fact to park minimum opening hands with 4+
           3NT
          </td>
          <td>
-          !Choice of games, 3(433), 12&ndash;15 HCP
+          !Choice of games, 12&ndash;15 HCP, 3(433)
          </td>
         </tr>
        </table>
@@ -10688,14 +10682,6 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
   </p>
   <p>
    https://hackmd.io/@TpKotoba/refx
-  </p>
-  <p>
-   When there are 5 hearts in 1
-   <span class="scolor">
-    &spades;
-   </span>
-   -1NT, it must be a balanced invitation without a
-spade fit, i.e. 2533.
   </p>
   <div class="tree">
    <ul>
@@ -11211,7 +11197,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          INV, 5+
+          MAX, 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -11229,7 +11215,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          INV, 5+
+          MAX, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -11259,9 +11245,13 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          INV, 5+
+          MAX 5+
           <span class="ccolor">
            &clubs;
+          </span>
+          or NF 5+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -11277,7 +11267,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          INV, 5+
+          MAX, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -11295,7 +11285,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          INV, 5+
+          MAX, 5+
           <span class="hcolor">
            &hearts;
           </span>
@@ -11352,11 +11342,11 @@ use reverse Bergen raises for hearts for several reasons:
           Rdbl
          </td>
          <td>
-          BAL 2&ndash;3
+          INV+, BAL 2&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
-          or 4144, 10+ HCP
+          or 4144
          </td>
         </tr>
        </table>
@@ -11444,7 +11434,6 @@ use reverse Bergen raises for hearts for several reasons:
           <span class="hcolor">
            &hearts;
           </span>
-          , 8.5&ndash;9.0 NLTC
          </td>
         </tr>
        </table>
@@ -11459,7 +11448,7 @@ use reverse Bergen raises for hearts for several reasons:
           </span>
          </td>
          <td>
-          !INV, (54)+ in minors, 9&ndash;11 HCP
+          !INV, (54)+ in minors
          </td>
         </tr>
        </table>
@@ -11500,11 +11489,11 @@ use reverse Bergen raises for hearts for several reasons:
           Rdbl
          </td>
          <td>
-          BAL 2&ndash;3
+          INV+, BAL 2&ndash;3
           <span class="scolor">
            &spades;
           </span>
-          or 1444, 10+ HCP
+          or 1444
          </td>
         </tr>
        </table>
@@ -11592,7 +11581,6 @@ use reverse Bergen raises for hearts for several reasons:
           <span class="scolor">
            &spades;
           </span>
-          , 8.5&ndash;9.0 NLTC
          </td>
         </tr>
        </table>
