deploy: aeb7a91e1a98f01455938c17227e4fee8ec798d0

--- a/blue.htm
+++ b/blue.htm
@@ -5370,7 +5370,11 @@ compete.
           <span class="hcolor">
            &hearts;
           </span>
-          , or CONST 4=
+          , CONST 4=
+          <span class="scolor">
+           &spades;
+          </span>
+          , or INV 3=
           <span class="scolor">
            &spades;
           </span>
@@ -5388,13 +5392,9 @@ compete.
           </span>
          </td>
          <td>
-          !NAT FG, FG 5+
+          !FG, NAT or 5+
           <span class="hcolor">
            &hearts;
-          </span>
-          , or INV 3=
-          <span class="scolor">
-           &spades;
           </span>
          </td>
         </tr>
