deploy: 633aa53e4c6c7500e30a23adcaf3b7b2b7894093

--- a/wj.htm
+++ b/wj.htm
@@ -982,6 +982,20 @@ hands elsewhere.
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2NT
+           </td>
+           <td>
+            !(R), ask for the better minor
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -7603,156 +7617,6 @@ temporizers and zero describers".
     </li>
    </ul>
   </div>
-  <h2>
-   Unbalanced invitational 2
-   <span class="scolor">
-    &spades;
-   </span>
-  </h2>
-  <p>
-   The 2
-   <span class="scolor">
-    &spades;
-   </span>
-   response shows an invitation with (54) or more in the minor suits.
-  </p>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -2
-     <span class="scolor">
-      &spades;
-     </span>
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          NF, 3&ndash;4
-          <span class="scolor">
-           &spades;
-          </span>
-          , 3&ndash;4
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 2&ndash;3
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 2&ndash;3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          NF, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          NF, 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          FG, 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          or ask for
-          <span class="scolor">
-           &spades;
-          </span>
-          stopper
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          FG, 5+
-          <span class="scolor">
-           &spades;
-          </span>
-          or ask for
-          <span class="hcolor">
-           &hearts;
-          </span>
-          stopper
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
   <h1>
    The 1
    <span class="dcolor">
@@ -10250,6 +10114,20 @@ this fact to park minimum opening hands with 4+
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2NT
+           </td>
+           <td>
+            !(R), ask for the better minor
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
