deploy: 34363aaaf2bfe307cafc02cb746f0497234a78a4

--- a/wj.htm
+++ b/wj.htm
@@ -523,6 +523,7 @@ problems, but I believe they can be solved by further adjustments.
           <span class="hcolor">
            &hearts;
           </span>
+          , not 44(32) if VUL
          </td>
         </tr>
        </table>
@@ -662,22 +663,6 @@ problems, but I believe they can be solved by further adjustments.
     </li>
    </ul>
   </div>
-  <p>
-   When preempting with 4+
-   <span class="scolor">
-    &spades;
-   </span>
-   and longer hearts, open 2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   with maximum (8&ndash;10 HCP)
-and 2
-   <span class="hcolor">
-    &hearts;
-   </span>
-   with minimum (4&ndash;8 HCP).
-  </p>
   <h2>
    The notrump ladder
   </h2>
