deploy: f4ce418fe29666b4c7366ee5a4410bd1569ae6cd

--- a/wj.htm
+++ b/wj.htm
@@ -15574,22 +15574,6 @@ at 2
    and leave space
 for Multi.
   </p>
-  <p>
-   In this version of Polish Club, we open minimum 4+
-   <span class="scolor">
-    &spades;
-   </span>
-   and longer hearts with 2
-   <span class="hcolor">
-    &hearts;
-   </span>
-   .
-This makes a tendency that spades are longer than hearts in Ekren hands.
-  </p>
-  <p>
-   Unlike natural preempts, we have 2NT as a non-forcing natural invitation.  Since
-Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
-  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -15608,7 +15592,7 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
           </span>
          </td>
          <td>
-          !(R)
+          !F, ask for the better major suit
          </td>
         </tr>
        </table>
@@ -15617,43 +15601,10 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            2
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            MIN
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            MIN, 5+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
             2NT
            </td>
            <td>
-            !MAX, 5+
+            !ART, 5+
             <span class="scolor">
              &spades;
             </span>
@@ -15675,7 +15626,18 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
             </span>
            </td>
            <td>
-            !MAX, 44(xx)
+            !MAX SPL, 0&ndash;1
+            <span class="ccolor">
+             &clubs;
+            </span>
+            , 5+
+            <span class="scolor">
+             &spades;
+            </span>
+            , 5+
+            <span class="hcolor">
+             &hearts;
+            </span>
            </td>
           </tr>
          </table>
@@ -15690,7 +15652,33 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
             </span>
            </td>
            <td>
-            !MAX TRF, 5+
+            !MAX SPL, 0&ndash;1
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 5+
+            <span class="scolor">
+             &spades;
+            </span>
+            , 5+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            6+
             <span class="hcolor">
              &hearts;
             </span>
@@ -15703,12 +15691,12 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
           <tr>
            <td class="node" rowspan="1">
             3
-            <span class="hcolor">
-             &hearts;
+            <span class="scolor">
+             &spades;
             </span>
            </td>
            <td>
-            !MAX TRF, 5+
+            6+
             <span class="scolor">
              &spades;
             </span>
@@ -15722,22 +15710,13 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2M
-         </td>
-         <td>
-          S/O
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
           2NT
          </td>
          <td>
-          !NF NAT
+          !NAT NF, usually long
+          <span class="dcolor">
+           &diams;
+          </span>
          </td>
         </tr>
        </table>
@@ -15752,84 +15731,12 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
           </span>
          </td>
          <td>
-          !FG (R)
+          NAT F
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            ! 44(xx)
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            !Smolen, 5+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            !Smolen, 5+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3NT
-           </td>
-           <td>
-            ! 5+
-            <span class="scolor">
-             &spades;
-            </span>
-            , 5+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -15839,7 +15746,37 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
           </span>
          </td>
          <td>
-          !NF NAT
+          NAT F
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !STR choice of games
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !PRE choice of games
          </td>
         </tr>
        </table>
